# screen-ghost

./: .gitignore  README.md  README_zh.md  overlay.html  package-lock.json  package.json  vite.config.ts
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
docs/: API_DOCUMENTATION.md  DEVELOPMENT_PLAN.md  PROJECT_STRUCTURE.md  TECHNICAL_DESIGN.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/python/: face_detection.py  face_recognition.py  faces.py
src-tauri/src/: lib.rs  main.rs
src-tauri/src-tauri/python/: faces.py
src-tauri/src/ai/: face_detect.rs  face_recognition.rs  faces.rs  mod.rs  python_env.rs
src-tauri/src/api/: command.rs  emitter.rs  mod.rs
src-tauri/src/app/: app_builder.rs  app_state.rs  autostart.rs  dispatcher.rs  mod.rs  panic_handler.rs  tray.rs
src-tauri/src/config/: face.rs  mod.rs  monitoring.rs  system.rs
src-tauri/src/monitor/: mod.rs  monitor.rs  screen_shot.rs
src-tauri/src/mosaic/: mod.rs  mosaic.rs
src-tauri/src/overlay/: mod.rs  overlay.rs  overlay_state.rs
src-tauri/src/system/monitoring/: mod.rs  monitor_state.rs
src-tauri/src/utils/: logger.rs  mod.rs  rect.rs
src/components/: PythonInstallationProgress.tsx
