[package]
name = "screen-ghost-rust"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screen_ghost_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools", "image-ico", ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_System_Com"
] }
tokio = { version = "1.44.2", features = ["time"] }
once_cell = "1.21.3"
lazy_static = "1.5.0"
thread_local = "1.1.8"
indexmap = { version = "2.9.0", features = ["serde"] }
log = "0.4"
toml = "0.8.10"
time = { version = "0.3", features = ["local-offset"] }
flexi_logger = "0.30.0"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-positioner = "2"
tauri-plugin-single-instance = "2"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
rayon = "1.8"
